# auth_microservice

./: .dockerignore  Cargo.toml  DEV  Dockerfile  Makefile
src/: auth.rs  hasher.rs  main.rs  prelude.rs
