[package]
authors = ["Peter Mezei <mezeipetister@gmail.com>"]
edition = "2018"
name = "auth_microservice"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
chrono = {version = "0.4", features = ["serde"]}
futures = "*"
gzlib = "*"
packman = "*"
prost = "0.6"
serde = {version = "1.0", features = ["derive"]}
sha2 = "0.9.2"
tokio = {version = "1.0.1", features = ["full"]}
tonic = "0.3"
uuid = {version = "0.8", features = ["v4"]}
